syntax = "proto3";

package type_person;

message TypePerson {
  string id = 1;
  string typePersonDescription = 2;
  string typePersonCode = 3;
}

// *********** DTO ***********
message Create {
  string typePersonDescription = 1;
  string typePersonCode = 2;
}

message Update {
  string id = 1;
  string typePersonDescription = 2;
  string typePersonCode = 3;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  string typePersonDescription = 2;
  string typePersonCode = 3;
}

// *********** One ***********
message One {
  TypePerson data = 1;
}

// *********** Many ***********
message Many {
  repeated TypePerson data = 1;
}

service TypePersonService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}