// Original file: src/protos/5/person.proto


export interface Person {
  'id'?: (string);
  'personIdentification'?: (string);
  'personFirstName'?: (string);
  'personSecondName'?: (string);
  'personFirstSurname'?: (string);
  'personSecondSurname'?: (string);
  'personCompanyName'?: (string);
  'companyId'?: (string);
  'typePersonId'?: (string);
  'typeIdentificationId'?: (string);
}

export interface Person__Output {
  'id': (string);
  'personIdentification': (string);
  'personFirstName': (string);
  'personSecondName': (string);
  'personFirstSurname': (string);
  'personSecondSurname': (string);
  'personCompanyName': (string);
  'companyId': (string);
  'typePersonId': (string);
  'typeIdentificationId': (string);
}
